--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
         "out": true // set this to false to include "out" folder in search results
     },
     "editor.renderWhitespace": "all",
-    "typescript.tsdk": "./node_modules/typescript/lib" // we want to use the TS server from our node_modules folder to control its version
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "i18n-ally.localesPaths": [],
+    "javascript.suggestionActions.enabled": false // we want to use the TS server from our node_modules folder to control its version
 }
